<resources>
    <string name="app_name">Covid Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bem_vindo_ao_covid_tracker">Bem vindo ao COVID Tracker</string>
    <string name="selecione_o_seu_estado">Selecione o seu estado</string>
    <string name="confirmar">Confirmar</string>
    <string name="n_de_casos">Nº de casos:</string>
    <string name="titulo_detalhes">Dados de %s</string>
    <string name="comparativo_casos">Casos em relação ao Brasil (%s)</string>
    <string name="comparativo_mortes">Mortes em relação ao Brasil (%s)</string>
</resources>
