<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EstadoDetalhesFragment"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/txv_titulo_detalhes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_detalhes"
        style="@style/titulo_detalhes"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_de_casos"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/txv_numero_casos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nº de mortes"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/txv_numero_mortes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nº de suspeitos"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/txv_numero_suspeitos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txv_comparativo_casos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/comparativo_casos"/>
    <ProgressBar
        android:id="@+id/pgb_casos"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:progress="50"/>

    <TextView
        android:id="@+id/txv_comparativo_mortes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/comparativo_mortes"/>
    <ProgressBar
        android:id="@+id/pgb_mortes"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:progress="50"/>

</LinearLayout>